uploaded the pdf's

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <p class="text-sm text-gray-500">Completed: September 2024</p>
                         </div>
                     </div>
-                    <a href="[LINK_TO_AI_CERTIFICATE_VERIFICATION_OR_PDF]" target="_blank" class="text-sm text-white bg-blue-500 hover:bg-blue-600 font-medium py-2 px-4 rounded-full shadow-md transition duration-200 whitespace-nowrap">
+                    <a href="cer1.pdf" target="_blank" class="text-sm text-white bg-blue-500 hover:bg-blue-600 font-medium py-2 px-4 rounded-full shadow-md transition duration-200 whitespace-nowrap">
                         View Certificate &rarr;
                     </a>
                 </div>
@@ -160,7 +160,7 @@
                             <p class="text-sm text-gray-500">Completed: September 2024</p>
                         </div>
                     </div>
-                    <a href="[LINK_TO_PYTHON_CERTIFICATE_VERIFICATION_OR_PDF]" target="_blank" class="text-sm text-white bg-blue-500 hover:bg-blue-600 font-medium py-2 px-4 rounded-full shadow-md transition duration-200 whitespace-nowrap">
+                    <a href="cer2.pdf" target="_blank" class="text-sm text-white bg-blue-500 hover:bg-blue-600 font-medium py-2 px-4 rounded-full shadow-md transition duration-200 whitespace-nowrap">
                         View Certificate &rarr;
                     </a>
                 </div>
@@ -175,7 +175,7 @@
                             <p class="text-sm text-gray-500">Completed: September 2024</p>
                         </div>
                     </div>
-                    <a href="[LINK_TO_SQL_CERTIFICATE_VERIFICATION_OR_PDF]" target="_blank" class="text-sm text-white bg-blue-500 hover:bg-blue-600 font-medium py-2 px-4 rounded-full shadow-md transition duration-200 whitespace-nowrap">
+                    <a href="cer3.pdf" target="_blank" class="text-sm text-white bg-blue-500 hover:bg-blue-600 font-medium py-2 px-4 rounded-full shadow-md transition duration-200 whitespace-nowrap">
                         View Certificate &rarr;
                     </a>
                 </div>
@@ -349,4 +349,5 @@
         });
     </script>
 </body>
+
 </html>
